feat: Calculate the derived attributes
Refs #79